--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "firebase": "^8.10.1",
+    "firestore-export-import": "^1.3.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.1.0"
